<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingTop="@dimen/padding_mini" 
    android:paddingBottom="@dimen/padding_mini" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/iv_icon"
        android:text="@string/sample_congratulation_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/tv_content1"
        android:layout_below="@+id/tv_title"
        android:layout_toLeftOf="@+id/iv_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/sample_congratulation_content1"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_mini" />

    <TextView
        android:id="@+id/tv_content2"
        android:layout_below="@+id/tv_content1"
        android:layout_toLeftOf="@+id/iv_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/sample_congratulation_content2"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_mini" />
    
    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/icon_yellow_option"
        android:contentDescription="@string/app_name" />

</RelativeLayout>