<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgm_background" >

    <!-- Custom Action Bar -->

    <include
        android:id="@+id/custom_actionbar"
        layout="@layout/custom_actionbar" />

    <!-- Ticket View -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_actionbar"
        android:layout_margin="@dimen/margin_mini"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/Stone_Rose_Lounge"
            android:textColor="@color/bgm_pink"
            android:textSize="@dimen/text_size_extra_large"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_event_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sample_event_time"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_normal" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            layout="@layout/dotted_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:text="@string/GENERAL_ADMISSION"
            android:textColor="@color/bgm_pink"
            android:textSize="@dimen/text_size_extra_large" />

        <include android:id="@+id/owner_name"
            layout="@layout/overview_item"/>

        <include android:id="@+id/id_number"
            layout="@layout/overview_item"/>

        <ImageView
            android:id="@+id/iv_qr_code"
            android:layout_width="@dimen/profile_avatar_size"
            android:layout_height="@dimen/profile_avatar_size"
            android:layout_marginTop="@dimen/margin_normal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sample_qr_code" />
            
        <TextView
            android:id="@+id/tv_qr_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_mini"
            android:text="@string/sample_qr_code"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/text_size_mini" />
            
    </LinearLayout>

</RelativeLayout>