<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_startup_bg"
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal" >

    <ImageView
        android:layout_width="@dimen/width_large_icon"
        android:layout_height="@dimen/height_large_icon"
        android:layout_marginBottom="@dimen/margin_large"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon_bemyguest" />

    <TextView
        android:id="@+id/tv_facebook_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_large_button"
        android:layout_marginBottom="@dimen/margin_normal"
        android:background="@color/bgm_blue"
        android:drawableLeft="@drawable/icon_facebook"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_facebook"
        android:paddingRight="@dimen/padding_facebook"
        android:text="@string/CONNECT_WITH_FACEBOOK"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_mini"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_login_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_large_button"
            android:layout_marginRight="@dimen/margin_mini"
            android:layout_weight="1"
            android:background="@drawable/empty_with_white_border_bg"
            android:gravity="center"
            android:text="@string/LOGIN"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />

        <TextView
            android:id="@+id/tv_signup_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_large_button"
            android:layout_marginLeft="@dimen/margin_mini"
            android:layout_weight="1"
            android:background="@drawable/empty_with_white_border_bg"
            android:gravity="center"
            android:text="@string/SIGNUP"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

</LinearLayout>